--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,29 +1,24 @@
 name: Docker Build and Push
-
 on:
   push:
     branches:
       - main
       - dev
-
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
       # 1) Check out your repository code
       - uses: actions/checkout@v3
-
       # 2) Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
       # 3) Log in to Docker Hub (requires DOCKERHUB_USERNAME & DOCKERHUB_PASSWORD secrets)
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
       # 4a) Build & Push if on 'main' branch
       - name: Build and Push (main)
         if: github.ref == 'refs/heads/main'
@@ -32,9 +27,8 @@ jobs:
           context: .
           push: true
           tags: |
-            admin9705/radarr-hunter:latest
-            admin9705/radarr-hunter:${{ github.sha }}
-
+            huntarr/4radarr:latest
+            huntarr/4radarr:${{ github.sha }}
       # 4b) Build & Push if on 'dev' branch
       - name: Build and Push (dev)
         if: github.ref == 'refs/heads/dev'
@@ -43,5 +37,5 @@ jobs:
           context: .
           push: true
           tags: |
-            admin9705/radarr-hunter:dev
-            admin9705/radarr-hunter:${{ github.sha }}
+            huntarr/4radarr:dev
+            huntarr/4radarr:${{ github.sha }}
