--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,25 +1,37 @@
 name: Docker Build and Push
+
 on:
   push:
     branches:
       - main
       - dev
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-      # 1) Check out your repository code
-      - uses: actions/checkout@v3
-      # 2) Set up Docker Buildx
+      # 1) Check out your repository code with full depth
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      # 2) List files to verify huntarr.sh is present
+      - name: List files in directory
+        run: ls -la
+
+      # 3) Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      # 3) Log in to Docker Hub (requires DOCKERHUB_USERNAME & DOCKERHUB_PASSWORD secrets)
+
+      # 4) Log in to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      # 4a) Build & Push if on 'main' branch
+
+      # 5a) Build & Push if on 'main' branch
       - name: Build and Push (main)
         if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v3
@@ -29,7 +41,8 @@ jobs:
           tags: |
             huntarr/4radarr:latest
             huntarr/4radarr:${{ github.sha }}
-      # 4b) Build & Push if on 'dev' branch
+
+      # 5b) Build & Push if on 'dev' branch
       - name: Build and Push (dev)
         if: github.ref == 'refs/heads/dev'
         uses: docker/build-push-action@v3
