--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
       - dev
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build-and-push:
@@ -16,7 +19,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      # 2) List files to verify huntarr.sh is present
+      # 2) List files to verify huntarr.py is present
       - name: List files in directory
         run: ls -la
 
@@ -26,6 +29,7 @@ jobs:
 
       # 4) Log in to Docker Hub
       - name: Log in to Docker Hub
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -33,22 +37,32 @@ jobs:
 
       # 5a) Build & Push if on 'main' branch
       - name: Build and Push (main)
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
           tags: |
             huntarr/4radarr:latest
+            huntarr/4radarr:py-latest
             huntarr/4radarr:${{ github.sha }}
 
       # 5b) Build & Push if on 'dev' branch
       - name: Build and Push (dev)
-        if: github.ref == 'refs/heads/dev'
+        if: github.ref == 'refs/heads/dev' && github.event_name != 'pull_request'
         uses: docker/build-push-action@v3
         with:
           context: .
           push: true
           tags: |
             huntarr/4radarr:dev
+            huntarr/4radarr:py-dev
             huntarr/4radarr:${{ github.sha }}
+      
+      # 5c) Just build on pull requests
+      - name: Build (PR)
+        if: github.event_name == 'pull_request'
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: false
